configs/internal/kong/extras/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: kong
  annotations:
    konghq.com/gatewayclass-unmanaged: 'true'
spec:
  controllerName: konghq.com/kic-gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: kong
  annotations:
    cert-manager.io/issuer: letsencrypt
spec:
  gatewayClassName: kong
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: proxy
    port: 80
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: All
    name: proxy-ssl
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: burrell-tech-tls
